header & hero done

--- a/index.html
+++ b/index.html
@@ -16,11 +16,42 @@
 <body>
     <header class="header">
         <nav class="header__nav">
-            
+            <span>
+                <a href="index.html">hospital</a>
+            </span>
+            <ul class="header__nav-list">
+                <li class="header__nav-list-item">
+                    <a href="#about">about</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#features">features</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#doctors">doctors</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#blog">blog</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#reviews">reviews</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="test.html">test</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
-        <section class="hero"></section>
+        <section class="hero">
+            <div class="hero__bgColor"></div>
+            <div class="hero__wrapper">
+                <h1>We are providing best and ‌affordable <span>health care</span>.</h1>
+                <p class="hero__text">We have built hospitals, arrange your doctor appointments and you will get your fast results. ‌We have the latest technology to diagnose and treat you.</p>
+                <button class="hero__btn">learn more</button><br>
+                <i class="fa-solid fa-location-dot"></i>
+                <a href="#" class="hero__location">London, Main  Steed 1</a>
+            </div>
+        </section>
         <section id="about" class="about"></section>
         <section id="features" class="features"></section>
         <section id="doctors" class="doctors"></section>
