--- a/test.html
+++ b/test.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital</title>
-
+    <link rel="stylesheet" href="./css/test.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header__nav">
+            <span>
+                <a href="index.html">hospital</a>
+            </span>
+            <ul class="header__nav-list">
+                <li class="header__nav-list-item">
+                    <a href="#about">about</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#features">features</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#doctors">doctors</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#blog">blog</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="#reviews">reviews</a>
+                </li>
+                <li class="header__nav-list-item">
+                    <a href="test.html">test</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
