header & hero done!

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <!-- favicons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -39,6 +42,7 @@
                     <a href="test.html">test</a>
                 </li>
             </ul>
+            <i onclick="menuFunc()" class="fa-solid fa-bars"></i>
         </nav>
     </header>
     <main>
@@ -46,13 +50,58 @@
             <div class="hero__bgColor"></div>
             <div class="hero__wrapper">
                 <h1>We are providing best and ‌affordable <span>health care</span>.</h1>
-                <p class="hero__text">We have built hospitals, arrange your doctor appointments and you will get your fast results. ‌We have the latest technology to diagnose and treat you.</p>
+                <p class="hero__text">We have built hospitals, arrange your doctor appointments and you will get your
+                    fast results. ‌We have the latest technology to diagnose and treat you.</p>
                 <button class="hero__btn">learn more</button><br>
                 <i class="fa-solid fa-location-dot"></i>
-                <a href="#" class="hero__location">London, Main  Steed 1</a>
+                <a href="#" class="hero__location">London, Main Steed 1</a>
             </div>
         </section>
-        <section id="about" class="about"></section>
+        <!-- <section id="about" class="about">
+            <div class="container">
+                <h2 class="about__title">professional medicine</h2>
+                <p class="about__text">I can change any and everything in my life by simply changing myself. This puts
+                    me in the driving seat of my life and makes</p>
+                <ul class="about__list">
+                    <li class="about__list-item">
+                        <div class="about__list-item-img"></div>
+                        <h3 class="about__list-item-title">qualified doctors</h3>
+                        <p class="about__list-item-text">Replenish him third creature and meat blessed void a fruit
+                            gathered you’re behold had seed.</p>
+                    </li>
+                    <li class="about__list-item">
+                        <div class="about__list-item-img"></div>
+                        <h3 class="about__list-item-title">emergency cases</h3>
+                        <p class="about__list-item-text">Replenish him third creature and meat blessed void a fruit
+                            gathered you’re behold had seed.</p>
+                    </li>
+                    <li class="about__list-item">
+                        <div class="about__list-item-img"></div>
+                        <h3 class="about__list-item-title">professional staff</h3>
+                        <p class="about__list-item-text">Replenish him third creature and meat blessed void a fruit
+                            gathered you’re behold had seed.</p>
+                    </li>
+                    <li class="about__list-item">
+                        <div class="about__list-item-img"></div>
+                        <h3 class="about__list-item-title">own ambulance</h3>
+                        <p class="about__list-item-text">Replenish him third creature and meat blessed void a fruit
+                            gathered you’re behold had seed.</p>
+                    </li>
+                    <li class="about__list-item">
+                        <div class="about__list-item-img"></div>
+                        <h3 class="about__list-item-title">children's ward</h3>
+                        <p class="about__list-item-text">Replenish him third creature and meat blessed void a fruit
+                            gathered you’re behold had seed.</p>
+                    </li>
+                    <li class="about__list-item">
+                        <div class="about__list-item-img"></div>
+                        <h3 class="about__list-item-title">intensive care unit</h3>
+                        <p class="about__list-item-text">Replenish him third creature and meat blessed void a fruit
+                            gathered you’re behold had seed.</p>
+                    </li>
+                </ul>
+            </div>
+        </section> -->
         <section id="features" class="features"></section>
         <section id="doctors" class="doctors"></section>
         <section id="blog" class="blog"></section>
@@ -61,5 +110,9 @@
     <footer class="footer">
 
     </footer>
+
+
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
