--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="#" class="hero__location">London, Main Steed 1</a>
             </div>
         </section>
-        <!-- <section id="about" class="about">
+        <section id="about" class="about">
             <div class="container">
                 <h2 class="about__title">professional medicine</h2>
                 <p class="about__text">I can change any and everything in my life by simply changing myself. This puts
@@ -101,7 +101,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section> 
         <section id="features" class="features"></section>
         <section id="doctors" class="doctors"></section>
         <section id="blog" class="blog"></section>
